5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1834_2602.log
== TEST (2019-07-02 10:47:03) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet=array(eval(input("X,Y,Z: ")))

matriz=array([[2,1,4],[1,2,0],[2,3,2]])
XYZ=dot(inv(matriz),a.T)
print("estafilococo:", round(XYZ[0],1))
print("salmonela:", round(XYZ[1],1))
print("coli:", round(XYZ[2],1))

if(XYZ[0]==min(XYZ)):
	print("estafilococo")
elif(XYZ[1]==min(XYZ)):
	print("salmonela")
elif(XYZ[2]==min(XYZ)):
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:47:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet=array(eval(input("X,Y,Z: ")))

matriz=array([[2,1,4],[1,2,0],[2,3,2]])
XYZ=dot(inv(matriz), a.T)
print("estafilococo:", round(XYZ[0],1))
print("salmonela:", round(XYZ[1],1))
print("coli:", round(XYZ[2],1))

if(XYZ[0]==min(XYZ)):
	print("estafilococo")
elif(XYZ[1]==min(XYZ)):
	print("salmonela")
elif(XYZ[2]==min(XYZ)):
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:48:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet=array(eval(input("X,Y,Z: ")))

matriz=array([[2,1,4],[1,2,0],[2,3,2]])
XYZ=dot(inv(matriz), a.T)
print("estafilococo:", round(XYZ[0],1))
print("salmonela:", round(XYZ[1],1))
print("coli:", round(XYZ[2],1))

if(XYZ[0]==min(XYZ)):
	print("estafilococo")
elif(XYZ[1]==min(XYZ)):
	print("salmonela")
elif(XYZ[2]==min(XYZ)):
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:34:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet=array(eval(input("X,Y,Z: ")))

matriz=array([[2,1,4],[1,2,0],[2,3,2]])
XYZ=dot(inv(matriz), a.T)
print("estafilococo:", round(XYZ[0],1))
print("salmonela:", round(XYZ[1],1))
print("coli:", round(XYZ[2],1))

if(XYZ[0]==min(XYZ)):
	print("estafilococo")
elif(XYZ[1]==min(XYZ)):
	print("salmonela")
elif(XYZ[2]==min(XYZ)):
	print("coli")
-- EXECUTION TIME:
1.13123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 7, in <module>
    XYZ=dot(inv(matriz), a.T)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:34:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet=array(eval(input("X,Y,Z: ")))

matriz=array([[2,1,4],[1,2,0],[2,3,2]])
XYZ=dot(inv(matriz), a.T)
print("estafilococo:", round(XYZ[0],1))
print("salmonela:", round(XYZ[1],1))
print("coli:", round(XYZ[2],1))

if(XYZ[0]==min(XYZ)):
	print("estafilococo")
elif(XYZ[1]==min(XYZ)):
	print("salmonela")
elif(XYZ[2]==min(XYZ)):
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:44:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet=array(eval(input("X,Y,Z: ")))

matriz=array([[2,1,4],[1,2,0],[2,3,2]])
XYZ=dot(inv(matriz), matriz.T)
print("estafilococo:", round(XYZ[0],1))
print("salmonela:", round(XYZ[1],1))
print("coli:", round(XYZ[2],1))

if(XYZ[0]==min(XYZ)):
	print("estafilococo")
elif(XYZ[1]==min(XYZ)):
	print("salmonela")
elif(XYZ[2]==min(XYZ)):
	print("coli")
-- EXECUTION TIME:
1.12062
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 8, in <module>
    print("estafilococo:", round(XYZ[0],1))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:44:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet=array(eval(input("X,Y,Z: ")))

matriz=array([[2,1,4],[1,2,0],[2,3,2]])
XYZ=dot(inv(matriz), matriz.T)
print("estafilococo:", round(XYZ[0],1))
print("salmonela:", round(XYZ[1],1))
print("coli:", round(XYZ[2],1))

if(XYZ[0]==min(XYZ)):
	print("estafilococo")
elif(XYZ[1]==min(XYZ)):
	print("salmonela")
elif(XYZ[2]==min(XYZ)):
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
